--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ footer h1 {
     border-radius: 100%;
 }
 /* hover icon footer left */
-.text {
+.email {
     width: 20rem;
     height: 2.5rem;
     border-radius: .4rem;
